fix: images not displaying well on smaller screens

--- a/src/main/Main.css
+++ b/src/main/Main.css
@@ -33,7 +33,7 @@
   display: block;
   width: 100%;
   margin: auto;
-  max-height: 250px;
+ height: 250px;
   border-radius: 15px;
 }
 .project__summary__title {
